# temp-dev-2021

./: .cursorignore  .gitignore  .swift-format  .swift-format-ignore  .swiftformat.backup  .swiftlint.yml  ARCHITECTURE.md  BACKGROUND_AUTOMATION.md  CHANGELOG.md  CODING_STANDARDS.md  CONTRIBUTING.md  DEBUG_SEGMENT_FLOW.md  ExportOptions.plist  IMPLEMENTATION_COMPLETE.md  LAUNCH_CRASH_FIX.md  LiveAssistant.xctestplan  PERMISSION_CRASH_FIX.md  PROJECT_SETUP_SUMMARY.md  Package.resolved  Package.swift  README.md  SWIFTGEN.md  SWIFTGEN_EXCLUSIONS.md  SYSTEM_AUDIO_CONFIDENCE_FIX.md  WORKFLOW.md  fix-macos-runner.sh  fix-workflows.sh  fix_macos_runner.sh  swiftgen.yml
.cursor/: settings.json
.github/: pull_request_template.md  (+1 more)
scripts/automation/: .gitignore  CURSOR_CLI_GUIDE.md  IMPLEMENTATION_STATUS.md  README.md  REFACTORING_SUMMARY.md  agent.sh  daemon.sh  invoke-cursor-agent.sh  pyproject.toml  requirements.txt  setup.py  start-daemon.sh  test-automation.sh  thread.sh  verify_installation.py
scripts/automation/legacy/: README.md  agent.sh  common.sh  invoke-cursor-agent.sh  state.sh  test-refactoring.sh
scripts/automation/src/cursor_automation/: __init__.py  __main__.py  agent_client.py  config.py  daemon.py  github_client.py  models.py  thread_manager.py  utils.py
scripts/automation/templates/: instructions-ask.md  instructions-footer.md  instructions-header.md  instructions-implement.md  instructions-plan.md
scripts/automation/tests/: conftest.py  test_agent_client.py  test_daemon.py  test_github_client.py  test_models.py  test_thread_manager.py  test_utils.py
(+135 files in other folders)
